--- a/styles.css
+++ b/styles.css
@@ -154,3 +154,11 @@ table {
 ::-webkit-scrollbar-thumb:hover {
     background: #419fff;
 }
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: 999;
+}
